fixed floating image on mobile and width of containers, especially on portfolio page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -116,8 +116,8 @@ img{
 
 .container-outer{
     background-color: white;
-    width: 80%;
-    max-width: 960px;
+    // width: 80%;
+    max-width: 1200px;
     margin: 3% auto -50px auto;
     padding: 5% 5% 10% 5%;
     background-color: $wrapper-color;
@@ -140,6 +140,13 @@ h2, legend{
 
 @media (max-width: 900px){
 
+        .portrait {
+
+            text-align: center;
+            img{
+                float: none;
+            }
+        }
         nav::before{
             content: url("../images/nellielogo.png");
             width: 275px;
